# libtransformation

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.md  bootstrap  build_deb.sh  configure.ac  corenova.pc.in  cscope.out  tags
docs/: README.xform  helloworld.ini  helloworld.xform
src/: Makefile.am
src/contrib/: Makefile.am
src/contrib/ActiveMQ/: Makefile.am  SimpleAsyncConsumer.cpp  mq.cpp
src/contrib/ubiqx/: README
src/include/: Makefile.am
src/include/corenova/: core.h  debug.h  interface.h  macros.h  module.h  source-stub.h
src/include/corenova/data/: array.h  cache.h  category.h  certstore.h  configuration.h  database.h  file.h  glob.h  hmap.h  inifile.h  list.h  md5.h  message.h  object.h  parameters.h  pbc.h  pipe.h  processor.h  queue.h  spool.h  streams.h  stree.h  string.h
src/include/corenova/data/configuration/: ini.h  xform.h
src/include/corenova/data/db/: mysql.h  pgsql.h  transaction.h
src/include/corenova/data/parser/: corenova.pb-c.h  gumboparser.h  json-c.h  jsonc.h
src/include/corenova/data/processor/: generic.h  transformation.h
src/include/corenova/net/: activemq.h  filter.h  neticmp.h  netntlm.h  packet.h  pcap.h  protocol.h  resolve.h  route.h  rpc.h  server.h  session.h  socket.h  ssl.h  tcp.h  tcptracker.h  transport.h  udp.h
src/include/corenova/sys/: compiler.h  debug.h  getopts.h  loader.h  nfqueue.h  quark.h  signals.h  transform.h  watchdog.h
src/modules/: Makefile.am
src/modules/corenova/: Makefile.am
src/modules/corenova/data/: Makefile.am  array.c  cache.c  category.c  certstore.c  configuration.c  database.c  file.c  glob.c  hmap.c  inifile.c  list.c  md5.c  message.c  object.c  parameters.c  pbc.c  pipe.c  processor.c  queue.c  spool.c  streams.c  stree.c  string.c
src/modules/corenova/data/configuration/: Makefile.am  ini.c  xform.c
src/modules/corenova/data/db/: Makefile.am  mysql.c  pgsql.c
src/modules/corenova/data/parser/: Makefile  Makefile.am  Makefile.in  corenova.pb-c.c  gumbo.c  gumboparser.c  json-c.c  jsonc.c
src/modules/corenova/data/processor/: Makefile.am  generic.c  transformation.c
src/modules/corenova/net/: Makefile.am  activemq.c  filter.c  neticmp.c  netntlm.c  packet.c  pcap.c  protocol.c  resolve.c  route.c  rpc.c  server.c  session.c  socket.c  ssl.c  tcp.c  tcptracker.c  transport.c  udp.c
src/modules/corenova/net/proto/: Makefile.am  XFORMXFER.c  XFORMXFER2_PLAIN.c  XFORMXFER3.c  XFORMXFER_PLAIN.c
src/modules/corenova/sys/: Makefile.am  compiler.c  debug.c  getopts.c  loader.c  nfqueue.c  quark.c  signals.c  transform.c  watchdog.c
src/modules/corenova/xform/: Makefile.am  helloworld.c  sample.c
src/programs/: Makefile.am  activemq_consumer.c  activemq_producer.c  activemqtest.c  analyzer.pl  check-module.c  corenova.c  database.c  dummy.c  gumbotest.c  input.html  tcp-connect.c  test_hmap.c  test_ntlm.c  test_pcap.c  test_route.c  transformer-output.txt  transformer.c  universal.c  valgrind.sh.in  watchdog.c
src/programs/test/: proxy.ini  proxy.xform  uproxy-vars.xform  uproxy.xform
