coreincludedir = $(includedir)/corenova
coreinclude_HEADERS =							\
	corenova/core.h								\
	corenova/debug.h							\
	corenova/interface.h						\
	corenova/macros.h							\
	corenova/module.h							\
	corenova/source-stub.h

datamoduleincludedir = $(includedir)/corenova/data
datamoduleinclude_HEADERS =						\
	corenova/data/array.h                       \
	corenova/data/cache.h                       \
	corenova/data/category.h					\
	corenova/data/configuration.h				\
	corenova/data/database.h					\
	corenova/data/file.h						\
	corenova/data/glob.h						\
	corenova/data/inifile.h						\
	corenova/data/list.h						\
	corenova/data/md5.h                         \
	corenova/data/message.h						\
	corenova/data/object.h						\
	corenova/data/parameters.h					\
	corenova/data/pipe.h						\
	corenova/data/processor.h					\
	corenova/data/queue.h						\
	corenova/data/spool.h						\
	corenova/data/streams.h                     \
	corenova/data/stree.h						\
	corenova/data/hmap.h						\
	corenova/data/string.h

dbmoduleincludedir = $(includedir)/corenova/data/db
dbmoduleinclude_HEADERS =						\
	corenova/data/db/mysql.h					\
	corenova/data/db/pgsql.h                    \
	corenova/data/db/transaction.h

procmoduleincludedir = $(includedir)/corenova/data/processor
procmoduleinclude_HEADERS =						\
	corenova/data/processor/generic.h			\
	corenova/data/processor/transformation.h

netmoduleincludedir = $(includedir)/corenova/net
netmoduleinclude_HEADERS =						\
	corenova/net/filter.h						\
	corenova/net/neticmp.h						\
	corenova/net/netntlm.h						\
	corenova/net/packet.h						\
	corenova/net/protocol.h						\
	corenova/net/resolve.h						\
	corenova/net/server.h						\
	corenova/net/session.h						\
	corenova/net/socket.h						\
	corenova/net/ssl.h						\
	corenova/net/tcp.h						\
	corenova/net/transport.h					\
	corenova/net/activemq.h						\
	corenova/net/udp.h						\
	corenova/net/route.h						\
	corenova/net/pcap.h

sysmoduleincludedir = $(includedir)/corenova/sys
sysmoduleinclude_HEADERS =						\
	corenova/sys/debug.h						\
	corenova/sys/watchdog.h						\
	corenova/sys/getopts.h						\
	corenova/sys/loader.h						\
	corenova/sys/nfqueue.h						\
	corenova/sys/quark.h						\
	corenova/sys/signals.h						\
	corenova/sys/transform.h

